boreal/tests/assets/invalid_files/compilation/invalid_identifier_type.yar
// [error: invalid identifier type]
import "tests"

rule c {
    condition:
        tests.struct_array() == /aab/
}
